fixed margin on mobile

--- a/src/components/main.css
+++ b/src/components/main.css
@@ -59,7 +59,7 @@ canvas:hover {
 @media only screen and (max-width: 768px) {
   .container-main {
     padding: 1rem;
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
   }
 
   canvas {
